service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
spec:
  ports:
  - port: 80
    targetPort: 8080   # Update this to the correct container port
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
